# antichess-tb-api

./: .gitignore  CMakeLists.txt  README.md
src/: antichess_tb_api.cpp  antichess_tb_api.h
src/tb/: position.h
src/tb/egtb/: tb_reader.cpp  tb_reader.h
tests/: CMakeLists.txt  test.cpp
